#update
added explicit compilation version to pom
renamed AutoConfig and BeanConfig to more precise names
updated pom to include resources folder again
updated .imports